implemented proxy and vpn detection api, written test cases for proxy and vpn service
