# src/Microservices.Common/ErrorHandlers/ModelValidationLoggingConfig.cs
@@ -2,6 +2,7 @@
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.Extensions.DependencyInjection;
 using Serilog;
+using System.Net;
 
 public static class ModelValidationLoggingConfig
 {
@@ -20,17 +21,15 @@ public static class ModelValidationLoggingConfig
                  .Where(x => x.Value?.Errors.Count > 0)
                  .SelectMany(x => x.Value?.Errors.Select(e => e.ErrorMessage) ?? Enumerable.Empty<string>())
                  .ToList();
-
-
                 Log.Warning("Model validation failed for {Path}. Errors: {@Errors}", context.HttpContext.Request.Path, errors);
 
-                APIResponse response = new()
+                Error error = new()
                 {
-                    Message = "Model validation failed.",
-                    Errors = errors
+                    ErrorCode = (int)HttpStatusCode.BadRequest,
+                    ErrorMessage = "Bad request, your request is not valid.",
                 };
 
-                return new BadRequestObjectResult(response);
+                return new BadRequestObjectResult(error);
             };
         });
 
