# src/Microservices.Models/Error.cs
@@ -1,0 +1,135 @@
+/*
+ * Email Verification API
+ *
+ * This API verifies the validity, risk, and deliverability of an email address. 
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+using System;
+using System.Linq;
+using System.Text;
+using System.Collections.Generic;
+using System.ComponentModel;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+using Microservices.Converters;
+
+namespace Microservices.Models
+{ 
+    /// <summary>
+    /// 
+    /// </summary>
+    [DataContract]
+    public partial class Error : IEquatable<Error>
+    {
+        /// <summary>
+        /// Numeric code representing the error type.
+        /// </summary>
+        /// <value>Numeric code representing the error type.</value>
+        [DataMember(Name="errorCode", EmitDefaultValue=true)]
+        public int ErrorCode { get; set; }
+
+        /// <summary>
+        /// Description of the error that occurred.
+        /// </summary>
+        /// <value>Description of the error that occurred.</value>
+        [DataMember(Name="errorMessage", EmitDefaultValue=false)]
+        public string ErrorMessage { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class Error {\n");
+            sb.Append("  ErrorCode: ").Append(ErrorCode).Append("\n");
+            sb.Append("  ErrorMessage: ").Append(ErrorMessage).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public string ToJson()
+        {
+            return JsonConvert.SerializeObject(this, Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="obj">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object obj)
+        {
+            if (obj is null) return false;
+            if (ReferenceEquals(this, obj)) return true;
+            return obj.GetType() == GetType() && Equals((Error)obj);
+        }
+
+        /// <summary>
+        /// Returns true if Error instances are equal
+        /// </summary>
+        /// <param name="other">Instance of Error to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(Error other)
+        {
+            if (other is null) return false;
+            if (ReferenceEquals(this, other)) return true;
+
+            return 
+                (
+                    ErrorCode == other.ErrorCode ||
+                    
+                    ErrorCode.Equals(other.ErrorCode)
+                ) && 
+                (
+                    ErrorMessage == other.ErrorMessage ||
+                    ErrorMessage != null &&
+                    ErrorMessage.Equals(other.ErrorMessage)
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                var hashCode = 41;
+                // Suitable nullity checks etc, of course :)
+                    
+                    hashCode = hashCode * 59 + ErrorCode.GetHashCode();
+                    if (ErrorMessage != null)
+                    hashCode = hashCode * 59 + ErrorMessage.GetHashCode();
+                return hashCode;
+            }
+        }
+
+        #region Operators
+        #pragma warning disable 1591
+
+        public static bool operator ==(Error left, Error right)
+        {
+            return Equals(left, right);
+        }
+
+        public static bool operator !=(Error left, Error right)
+        {
+            return !Equals(left, right);
+        }
+
+        #pragma warning restore 1591
+        #endregion Operators
+    }
+}
