# src/Microservices.Models/ProxyAndVpnDetectionRequest.cs
@@ -1,0 +1,121 @@
+/*
+ * Email Verification API
+ *
+ * This API verifies the validity, risk, and deliverability of an email address. 
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+using System;
+using System.Linq;
+using System.Text;
+using System.Collections.Generic;
+using System.ComponentModel;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+using Microservices.Converters;
+
+namespace Microservices.Models
+{ 
+    /// <summary>
+    /// 
+    /// </summary>
+    [DataContract]
+    public partial class ProxyAndVpnDetectionRequest : IEquatable<ProxyAndVpnDetectionRequest>
+    {
+        /// <summary>
+        /// ipAddress to be verified.
+        /// </summary>
+        /// <value>ipAddress to be verified.</value>
+        /* <example>8.8.8.0</example> */
+        [DataMember(Name="ipAddress", EmitDefaultValue=false)]
+        public string IpAddress { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class ProxyAndVpnDetectionRequest {\n");
+            sb.Append("  IpAddress: ").Append(IpAddress).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public string ToJson()
+        {
+            return JsonConvert.SerializeObject(this, Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="obj">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object obj)
+        {
+            if (obj is null) return false;
+            if (ReferenceEquals(this, obj)) return true;
+            return obj.GetType() == GetType() && Equals((ProxyAndVpnDetectionRequest)obj);
+        }
+
+        /// <summary>
+        /// Returns true if ProxyAndVpnDetectionRequest instances are equal
+        /// </summary>
+        /// <param name="other">Instance of ProxyAndVpnDetectionRequest to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(ProxyAndVpnDetectionRequest other)
+        {
+            if (other is null) return false;
+            if (ReferenceEquals(this, other)) return true;
+
+            return 
+                (
+                    IpAddress == other.IpAddress ||
+                    IpAddress != null &&
+                    IpAddress.Equals(other.IpAddress)
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                var hashCode = 41;
+                // Suitable nullity checks etc, of course :)
+                    if (IpAddress != null)
+                    hashCode = hashCode * 59 + IpAddress.GetHashCode();
+                return hashCode;
+            }
+        }
+
+        #region Operators
+        #pragma warning disable 1591
+
+        public static bool operator ==(ProxyAndVpnDetectionRequest left, ProxyAndVpnDetectionRequest right)
+        {
+            return Equals(left, right);
+        }
+
+        public static bool operator !=(ProxyAndVpnDetectionRequest left, ProxyAndVpnDetectionRequest right)
+        {
+            return !Equals(left, right);
+        }
+
+        #pragma warning restore 1591
+        #endregion Operators
+    }
+}
